qt/gen_qcombobox.h

typedef struct QAbstractItemDelegate QAbstractItemDelegate;
typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QAbstractItemView QAbstractItemView;
typedef struct QComboBox QComboBox;
typedef struct QCompleter QCompleter;
typedef struct QEvent QEvent;
typedef struct QIcon QIcon;
typedef struct QLineEdit QLineEdit;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QSize QSize;
typedef struct QValidator QValidator;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QComboBox* QComboBox_new(QWidget* parent);
QComboBox* QComboBox_new2();
QMetaObject* QComboBox_metaObject(const QComboBox* self);
void* QComboBox_metacast(QComboBox* self, const char* param1);
int QComboBox_metacall(QComboBox* self, int param1, int param2, void** param3);
struct miqt_string QComboBox_tr(const char* s);
struct miqt_string QComboBox_trUtf8(const char* s);
int QComboBox_maxVisibleItems(const QComboBox* self);
void QComboBox_setMaxVisibleItems(QComboBox* self, int maxItems);
int QComboBox_count(const QComboBox* self);
void QComboBox_setMaxCount(QComboBox* self, int max);
int QComboBox_maxCount(const QComboBox* self);
bool QComboBox_autoCompletion(const QComboBox* self);
void QComboBox_setAutoCompletion(QComboBox* self, bool enable);
int QComboBox_autoCompletionCaseSensitivity(const QComboBox* self);
void QComboBox_setAutoCompletionCaseSensitivity(QComboBox* self, int sensitivity);
bool QComboBox_duplicatesEnabled(const QComboBox* self);
void QComboBox_setDuplicatesEnabled(QComboBox* self, bool enable);
void QComboBox_setFrame(QComboBox* self, bool frame);
bool QComboBox_hasFrame(const QComboBox* self);
int QComboBox_findText(const QComboBox* self, struct miqt_string text);
int QComboBox_findData(const QComboBox* self, QVariant* data);
int QComboBox_insertPolicy(const QComboBox* self);
void QComboBox_setInsertPolicy(QComboBox* self, int policy);
int QComboBox_sizeAdjustPolicy(const QComboBox* self);
void QComboBox_setSizeAdjustPolicy(QComboBox* self, int policy);
int QComboBox_minimumContentsLength(const QComboBox* self);
void QComboBox_setMinimumContentsLength(QComboBox* self, int characters);
QSize* QComboBox_iconSize(const QComboBox* self);
void QComboBox_setIconSize(QComboBox* self, QSize* size);
void QComboBox_setPlaceholderText(QComboBox* self, struct miqt_string placeholderText);
struct miqt_string QComboBox_placeholderText(const QComboBox* self);
bool QComboBox_isEditable(const QComboBox* self);
void QComboBox_setEditable(QComboBox* self, bool editable);
void QComboBox_setLineEdit(QComboBox* self, QLineEdit* edit);
QLineEdit* QComboBox_lineEdit(const QComboBox* self);
void QComboBox_setValidator(QComboBox* self, QValidator* v);
QValidator* QComboBox_validator(const QComboBox* self);
void QComboBox_setCompleter(QComboBox* self, QCompleter* c);
QCompleter* QComboBox_completer(const QComboBox* self);
QAbstractItemDelegate* QComboBox_itemDelegate(const QComboBox* self);
void QComboBox_setItemDelegate(QComboBox* self, QAbstractItemDelegate* delegate);
QAbstractItemModel* QComboBox_model(const QComboBox* self);
void QComboBox_setModel(QComboBox* self, QAbstractItemModel* model);
QModelIndex* QComboBox_rootModelIndex(const QComboBox* self);
void QComboBox_setRootModelIndex(QComboBox* self, QModelIndex* index);
int QComboBox_modelColumn(const QComboBox* self);
void QComboBox_setModelColumn(QComboBox* self, int visibleColumn);
int QComboBox_currentIndex(const QComboBox* self);
struct miqt_string QComboBox_currentText(const QComboBox* self);
QVariant* QComboBox_currentData(const QComboBox* self);
struct miqt_string QComboBox_itemText(const QComboBox* self, int index);
QIcon* QComboBox_itemIcon(const QComboBox* self, int index);
QVariant* QComboBox_itemData(const QComboBox* self, int index);
void QComboBox_addItem(QComboBox* self, struct miqt_string text);
void QComboBox_addItem2(QComboBox* self, QIcon* icon, struct miqt_string text);
void QComboBox_addItems(QComboBox* self, struct miqt_array /* of struct miqt_string */  texts);
void QComboBox_insertItem(QComboBox* self, int index, struct miqt_string text);
void QComboBox_insertItem2(QComboBox* self, int index, QIcon* icon, struct miqt_string text);
void QComboBox_insertItems(QComboBox* self, int index, struct miqt_array /* of struct miqt_string */  texts);
void QComboBox_insertSeparator(QComboBox* self, int index);
void QComboBox_removeItem(QComboBox* self, int index);
void QComboBox_setItemText(QComboBox* self, int index, struct miqt_string text);
void QComboBox_setItemIcon(QComboBox* self, int index, QIcon* icon);
void QComboBox_setItemData(QComboBox* self, int index, QVariant* value);
QAbstractItemView* QComboBox_view(const QComboBox* self);
void QComboBox_setView(QComboBox* self, QAbstractItemView* itemView);
QSize* QComboBox_sizeHint(const QComboBox* self);
QSize* QComboBox_minimumSizeHint(const QComboBox* self);
void QComboBox_showPopup(QComboBox* self);
void QComboBox_hidePopup(QComboBox* self);
bool QComboBox_event(QComboBox* self, QEvent* event);
QVariant* QComboBox_inputMethodQuery(const QComboBox* self, int param1);
QVariant* QComboBox_inputMethodQuery2(const QComboBox* self, int query, QVariant* argument);
void QComboBox_clear(QComboBox* self);
void QComboBox_clearEditText(QComboBox* self);
void QComboBox_setEditText(QComboBox* self, struct miqt_string text);
void QComboBox_setCurrentIndex(QComboBox* self, int index);
void QComboBox_setCurrentText(QComboBox* self, struct miqt_string text);
void QComboBox_editTextChanged(QComboBox* self, struct miqt_string param1);
void QComboBox_connect_editTextChanged(QComboBox* self, intptr_t slot);
void QComboBox_activated(QComboBox* self, int index);
void QComboBox_connect_activated(QComboBox* self, intptr_t slot);
void QComboBox_textActivated(QComboBox* self, struct miqt_string param1);
void QComboBox_connect_textActivated(QComboBox* self, intptr_t slot);
void QComboBox_highlighted(QComboBox* self, int index);
void QComboBox_connect_highlighted(QComboBox* self, intptr_t slot);
void QComboBox_textHighlighted(QComboBox* self, struct miqt_string param1);
void QComboBox_connect_textHighlighted(QComboBox* self, intptr_t slot);
void QComboBox_currentIndexChanged(QComboBox* self, int index);
void QComboBox_connect_currentIndexChanged(QComboBox* self, intptr_t slot);
void QComboBox_currentIndexChangedWithQString(QComboBox* self, struct miqt_string param1);
void QComboBox_connect_currentIndexChangedWithQString(QComboBox* self, intptr_t slot);
void QComboBox_currentTextChanged(QComboBox* self, struct miqt_string param1);
void QComboBox_connect_currentTextChanged(QComboBox* self, intptr_t slot);
void QComboBox_activatedWithQString(QComboBox* self, struct miqt_string param1);
void QComboBox_connect_activatedWithQString(QComboBox* self, intptr_t slot);
void QComboBox_highlightedWithQString(QComboBox* self, struct miqt_string param1);
void QComboBox_connect_highlightedWithQString(QComboBox* self, intptr_t slot);
struct miqt_string QComboBox_tr2(const char* s, const char* c);
struct miqt_string QComboBox_tr3(const char* s, const char* c, int n);
struct miqt_string QComboBox_trUtf82(const char* s, const char* c);
struct miqt_string QComboBox_trUtf83(const char* s, const char* c, int n);
int QComboBox_findText2(const QComboBox* self, struct miqt_string text, int flags);
int QComboBox_findData2(const QComboBox* self, QVariant* data, int role);
int QComboBox_findData3(const QComboBox* self, QVariant* data, int role, int flags);
QVariant* QComboBox_currentData1(const QComboBox* self, int role);
QVariant* QComboBox_itemData2(const QComboBox* self, int index, int role);
void QComboBox_addItem22(QComboBox* self, struct miqt_string text, QVariant* userData);
void QComboBox_addItem3(QComboBox* self, QIcon* icon, struct miqt_string text, QVariant* userData);
void QComboBox_insertItem3(QComboBox* self, int index, struct miqt_string text, QVariant* userData);