qt/gen_qcombobox.nim


proc fcQComboBox_new(parent: pointer): ptr cQComboBox {.importc: "QComboBox_new".}
proc fcQComboBox_new2(): ptr cQComboBox {.importc: "QComboBox_new2".}
proc fcQComboBox_metaObject(self: pointer, ): pointer {.importc: "QComboBox_metaObject".}
proc fcQComboBox_metacast(self: pointer, param1: cstring): pointer {.importc: "QComboBox_metacast".}
proc fcQComboBox_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QComboBox_metacall".}
proc fcQComboBox_tr(s: cstring): struct_miqt_string {.importc: "QComboBox_tr".}
proc fcQComboBox_trUtf8(s: cstring): struct_miqt_string {.importc: "QComboBox_trUtf8".}
proc fcQComboBox_maxVisibleItems(self: pointer, ): cint {.importc: "QComboBox_maxVisibleItems".}
proc fcQComboBox_setMaxVisibleItems(self: pointer, maxItems: cint): void {.importc: "QComboBox_setMaxVisibleItems".}
proc fcQComboBox_count(self: pointer, ): cint {.importc: "QComboBox_count".}
proc fcQComboBox_setMaxCount(self: pointer, max: cint): void {.importc: "QComboBox_setMaxCount".}
proc fcQComboBox_maxCount(self: pointer, ): cint {.importc: "QComboBox_maxCount".}
proc fcQComboBox_autoCompletion(self: pointer, ): bool {.importc: "QComboBox_autoCompletion".}
proc fcQComboBox_setAutoCompletion(self: pointer, enable: bool): void {.importc: "QComboBox_setAutoCompletion".}
proc fcQComboBox_autoCompletionCaseSensitivity(self: pointer, ): cint {.importc: "QComboBox_autoCompletionCaseSensitivity".}
proc fcQComboBox_setAutoCompletionCaseSensitivity(self: pointer, sensitivity: cint): void {.importc: "QComboBox_setAutoCompletionCaseSensitivity".}
proc fcQComboBox_duplicatesEnabled(self: pointer, ): bool {.importc: "QComboBox_duplicatesEnabled".}
proc fcQComboBox_setDuplicatesEnabled(self: pointer, enable: bool): void {.importc: "QComboBox_setDuplicatesEnabled".}
proc fcQComboBox_setFrame(self: pointer, frame: bool): void {.importc: "QComboBox_setFrame".}
proc fcQComboBox_hasFrame(self: pointer, ): bool {.importc: "QComboBox_hasFrame".}
proc fcQComboBox_findText(self: pointer, text: struct_miqt_string): cint {.importc: "QComboBox_findText".}
proc fcQComboBox_findData(self: pointer, data: pointer): cint {.importc: "QComboBox_findData".}
proc fcQComboBox_insertPolicy(self: pointer, ): cint {.importc: "QComboBox_insertPolicy".}
proc fcQComboBox_setInsertPolicy(self: pointer, policy: cint): void {.importc: "QComboBox_setInsertPolicy".}
proc fcQComboBox_sizeAdjustPolicy(self: pointer, ): cint {.importc: "QComboBox_sizeAdjustPolicy".}
proc fcQComboBox_setSizeAdjustPolicy(self: pointer, policy: cint): void {.importc: "QComboBox_setSizeAdjustPolicy".}
proc fcQComboBox_minimumContentsLength(self: pointer, ): cint {.importc: "QComboBox_minimumContentsLength".}
proc fcQComboBox_setMinimumContentsLength(self: pointer, characters: cint): void {.importc: "QComboBox_setMinimumContentsLength".}
proc fcQComboBox_iconSize(self: pointer, ): pointer {.importc: "QComboBox_iconSize".}
proc fcQComboBox_setIconSize(self: pointer, size: pointer): void {.importc: "QComboBox_setIconSize".}
proc fcQComboBox_setPlaceholderText(self: pointer, placeholderText: struct_miqt_string): void {.importc: "QComboBox_setPlaceholderText".}
proc fcQComboBox_placeholderText(self: pointer, ): struct_miqt_string {.importc: "QComboBox_placeholderText".}
proc fcQComboBox_isEditable(self: pointer, ): bool {.importc: "QComboBox_isEditable".}
proc fcQComboBox_setEditable(self: pointer, editable: bool): void {.importc: "QComboBox_setEditable".}
proc fcQComboBox_setLineEdit(self: pointer, edit: pointer): void {.importc: "QComboBox_setLineEdit".}
proc fcQComboBox_lineEdit(self: pointer, ): pointer {.importc: "QComboBox_lineEdit".}
proc fcQComboBox_setValidator(self: pointer, v: pointer): void {.importc: "QComboBox_setValidator".}
proc fcQComboBox_validator(self: pointer, ): pointer {.importc: "QComboBox_validator".}
proc fcQComboBox_setCompleter(self: pointer, c: pointer): void {.importc: "QComboBox_setCompleter".}
proc fcQComboBox_completer(self: pointer, ): pointer {.importc: "QComboBox_completer".}
proc fcQComboBox_itemDelegate(self: pointer, ): pointer {.importc: "QComboBox_itemDelegate".}
proc fcQComboBox_setItemDelegate(self: pointer, delegate: pointer): void {.importc: "QComboBox_setItemDelegate".}
proc fcQComboBox_model(self: pointer, ): pointer {.importc: "QComboBox_model".}
proc fcQComboBox_setModel(self: pointer, model: pointer): void {.importc: "QComboBox_setModel".}
proc fcQComboBox_rootModelIndex(self: pointer, ): pointer {.importc: "QComboBox_rootModelIndex".}
proc fcQComboBox_setRootModelIndex(self: pointer, index: pointer): void {.importc: "QComboBox_setRootModelIndex".}
proc fcQComboBox_modelColumn(self: pointer, ): cint {.importc: "QComboBox_modelColumn".}
proc fcQComboBox_setModelColumn(self: pointer, visibleColumn: cint): void {.importc: "QComboBox_setModelColumn".}
proc fcQComboBox_currentIndex(self: pointer, ): cint {.importc: "QComboBox_currentIndex".}
proc fcQComboBox_currentText(self: pointer, ): struct_miqt_string {.importc: "QComboBox_currentText".}
proc fcQComboBox_currentData(self: pointer, ): pointer {.importc: "QComboBox_currentData".}
proc fcQComboBox_itemText(self: pointer, index: cint): struct_miqt_string {.importc: "QComboBox_itemText".}
proc fcQComboBox_itemIcon(self: pointer, index: cint): pointer {.importc: "QComboBox_itemIcon".}
proc fcQComboBox_itemData(self: pointer, index: cint): pointer {.importc: "QComboBox_itemData".}
proc fcQComboBox_addItem(self: pointer, text: struct_miqt_string): void {.importc: "QComboBox_addItem".}
proc fcQComboBox_addItem2(self: pointer, icon: pointer, text: struct_miqt_string): void {.importc: "QComboBox_addItem2".}
proc fcQComboBox_addItems(self: pointer, texts: struct_miqt_array): void {.importc: "QComboBox_addItems".}
proc fcQComboBox_insertItem(self: pointer, index: cint, text: struct_miqt_string): void {.importc: "QComboBox_insertItem".}
proc fcQComboBox_insertItem2(self: pointer, index: cint, icon: pointer, text: struct_miqt_string): void {.importc: "QComboBox_insertItem2".}
proc fcQComboBox_insertItems(self: pointer, index: cint, texts: struct_miqt_array): void {.importc: "QComboBox_insertItems".}
proc fcQComboBox_insertSeparator(self: pointer, index: cint): void {.importc: "QComboBox_insertSeparator".}
proc fcQComboBox_removeItem(self: pointer, index: cint): void {.importc: "QComboBox_removeItem".}
proc fcQComboBox_setItemText(self: pointer, index: cint, text: struct_miqt_string): void {.importc: "QComboBox_setItemText".}
proc fcQComboBox_setItemIcon(self: pointer, index: cint, icon: pointer): void {.importc: "QComboBox_setItemIcon".}
proc fcQComboBox_setItemData(self: pointer, index: cint, value: pointer): void {.importc: "QComboBox_setItemData".}
proc fcQComboBox_view(self: pointer, ): pointer {.importc: "QComboBox_view".}
proc fcQComboBox_setView(self: pointer, itemView: pointer): void {.importc: "QComboBox_setView".}
proc fcQComboBox_sizeHint(self: pointer, ): pointer {.importc: "QComboBox_sizeHint".}
proc fcQComboBox_minimumSizeHint(self: pointer, ): pointer {.importc: "QComboBox_minimumSizeHint".}
proc fcQComboBox_showPopup(self: pointer, ): void {.importc: "QComboBox_showPopup".}
proc fcQComboBox_hidePopup(self: pointer, ): void {.importc: "QComboBox_hidePopup".}
proc fcQComboBox_event(self: pointer, event: pointer): bool {.importc: "QComboBox_event".}
proc fcQComboBox_inputMethodQuery(self: pointer, param1: cint): pointer {.importc: "QComboBox_inputMethodQuery".}
proc fcQComboBox_inputMethodQuery2(self: pointer, query: cint, argument: pointer): pointer {.importc: "QComboBox_inputMethodQuery2".}
proc fcQComboBox_clear(self: pointer, ): void {.importc: "QComboBox_clear".}
proc fcQComboBox_clearEditText(self: pointer, ): void {.importc: "QComboBox_clearEditText".}
proc fcQComboBox_setEditText(self: pointer, text: struct_miqt_string): void {.importc: "QComboBox_setEditText".}
proc fcQComboBox_setCurrentIndex(self: pointer, index: cint): void {.importc: "QComboBox_setCurrentIndex".}
proc fcQComboBox_setCurrentText(self: pointer, text: struct_miqt_string): void {.importc: "QComboBox_setCurrentText".}
proc fcQComboBox_editTextChanged(self: pointer, param1: struct_miqt_string): void {.importc: "QComboBox_editTextChanged".}
proc fQComboBox_connect_editTextChanged(self: pointer, slot: int) {.importc: "QComboBox_connect_editTextChanged".}
proc fcQComboBox_activated(self: pointer, index: cint): void {.importc: "QComboBox_activated".}
proc fQComboBox_connect_activated(self: pointer, slot: int) {.importc: "QComboBox_connect_activated".}
proc fcQComboBox_textActivated(self: pointer, param1: struct_miqt_string): void {.importc: "QComboBox_textActivated".}
proc fQComboBox_connect_textActivated(self: pointer, slot: int) {.importc: "QComboBox_connect_textActivated".}
proc fcQComboBox_highlighted(self: pointer, index: cint): void {.importc: "QComboBox_highlighted".}
proc fQComboBox_connect_highlighted(self: pointer, slot: int) {.importc: "QComboBox_connect_highlighted".}
proc fcQComboBox_textHighlighted(self: pointer, param1: struct_miqt_string): void {.importc: "QComboBox_textHighlighted".}
proc fQComboBox_connect_textHighlighted(self: pointer, slot: int) {.importc: "QComboBox_connect_textHighlighted".}
proc fcQComboBox_currentIndexChanged(self: pointer, index: cint): void {.importc: "QComboBox_currentIndexChanged".}
proc fQComboBox_connect_currentIndexChanged(self: pointer, slot: int) {.importc: "QComboBox_connect_currentIndexChanged".}
proc fcQComboBox_currentIndexChangedWithQString(self: pointer, param1: struct_miqt_string): void {.importc: "QComboBox_currentIndexChangedWithQString".}
proc fQComboBox_connect_currentIndexChangedWithQString(self: pointer, slot: int) {.importc: "QComboBox_connect_currentIndexChangedWithQString".}
proc fcQComboBox_currentTextChanged(self: pointer, param1: struct_miqt_string): void {.importc: "QComboBox_currentTextChanged".}
proc fQComboBox_connect_currentTextChanged(self: pointer, slot: int) {.importc: "QComboBox_connect_currentTextChanged".}
proc fcQComboBox_activatedWithQString(self: pointer, param1: struct_miqt_string): void {.importc: "QComboBox_activatedWithQString".}
proc fQComboBox_connect_activatedWithQString(self: pointer, slot: int) {.importc: "QComboBox_connect_activatedWithQString".}
proc fcQComboBox_highlightedWithQString(self: pointer, param1: struct_miqt_string): void {.importc: "QComboBox_highlightedWithQString".}
proc fQComboBox_connect_highlightedWithQString(self: pointer, slot: int) {.importc: "QComboBox_connect_highlightedWithQString".}
proc fcQComboBox_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QComboBox_tr2".}
proc fcQComboBox_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QComboBox_tr3".}
proc fcQComboBox_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QComboBox_trUtf82".}
proc fcQComboBox_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QComboBox_trUtf83".}
proc fcQComboBox_findText2(self: pointer, text: struct_miqt_string, flags: cint): cint {.importc: "QComboBox_findText2".}
proc fcQComboBox_findData2(self: pointer, data: pointer, role: cint): cint {.importc: "QComboBox_findData2".}
proc fcQComboBox_findData3(self: pointer, data: pointer, role: cint, flags: cint): cint {.importc: "QComboBox_findData3".}
proc fcQComboBox_currentData1(self: pointer, role: cint): pointer {.importc: "QComboBox_currentData1".}
proc fcQComboBox_itemData2(self: pointer, index: cint, role: cint): pointer {.importc: "QComboBox_itemData2".}
proc fcQComboBox_addItem22(self: pointer, text: struct_miqt_string, userData: pointer): void {.importc: "QComboBox_addItem22".}
proc fcQComboBox_addItem3(self: pointer, icon: pointer, text: struct_miqt_string, userData: pointer): void {.importc: "QComboBox_addItem3".}
proc fcQComboBox_insertItem3(self: pointer, index: cint, text: struct_miqt_string, userData: pointer): void {.importc: "QComboBox_insertItem3".}
